1.6 (svn/unreleased)

- Use the field id instead of title as the key column for the field mapping,
  so that it's possible to set the mapping programmatically without worrying
  about the titles.
  [davisagli]

- Cut out duplicate setup code and unnecessary API calls throughout testing
  with use of onsetup decorator.
  [andrewb]

- Fix for issue #13, whereby hitting the next button while editing a
  Salesforce Adapter with PloneFormGen 1.5b2 redirected off to the Form 
  Folder's Quick Edit UI, rather than the field mapping UI as expected.
  [andrewb]

- Move substantial portions of package installation to GenericSetup.
  [andrewb]

- No longer supporting Plone 2.5, pull out all the complex workarounds 
  associated with support older version.
  [andrewb]

- Added metadata.xml to GenericSetup profile.
  [andrewb]

1.5  - released February 18, 2009

- Clean-up of overly long lines (e.g. > 80 chars) in README.txt 
  [andrewb]

1.5rc1

- Added information about known issue #30 within dependency DataGridField.
  http://plone.org/products/datagridfield/issues/30
  [andrewb]

- Added read_permission protection to how Salesforce Adapters have been 
  configured.  The title is viewable by all, but the SFObjectType, fieldMap,
  and dependencyMap fields are now only visible to those with the 
  ModifyPortalContent permission.  Now 'base_view' respects this when 
  regurgitating the values on any give adapter object
  [andrewb]

- Stop using trademarked Salesforce.com icon 
  [davisagli]

1.5a3

- Better handling of empty FormIntegerField values, which when left blank were
  filled by an empty string that was being passed along within the created 
  object.  In the case of a string-like field, this was fine, but integer 
  fields (i.e. documented as xsd:double and xsd:int format in the SF WSDL) 
  were another story.  This resolves:
  http://plone.org/products/salesforcepfgadapter/issues/8
  Note: If a FormIntegerField was a required field and therefore came through 