@@ -29,7 +29,6 @@ from Products.Archetypes.public import StringField, StringWidget, \
     SelectionWidget, BooleanField, BooleanWidget, DisplayList, Schema, \
     ManagedSchema
 
-from Products.ATContentTypes.content.schemata import finalizeATCTSchema
 from Products.ATContentTypes.content.base import registerATCT, ATCTContent
 from Products.CMFCore.permissions import View, ModifyPortalContent
 from Products.CMFCore.utils import getToolByName
@@ -39,6 +38,7 @@ from Products.validation.config import validation
 from Products.DataGridField import DataGridField, DataGridWidget
 from Products.DataGridField.SelectColumn import SelectColumn
 from Products.DataGridField.FixedColumn import FixedColumn
+from Products.DataGridField.Column import Column
 from Products.DataGridField.DataGridField import FixedRow
 
 # Interfaces
@@ -90,13 +90,32 @@ schema = FormAdapterSchema.copy() + Schema((
                  Salesforce Field for each Form Field.""",
              description_msgid = 'help_salesforce_field_map',
              columns= {
-                 "field_path" : FixedColumn("Form Fields (path)", visible=False),
-                 "form_field" : FixedColumn("Form Fields"),
-                 "sf_field" : SelectColumn("Salesforce Fields", 
+                 "field_path" : FixedColumn("Form Field (path)", visible=False),
+                 "form_field" : FixedColumn("Form Field"),
+                 "sf_field" : SelectColumn("Salesforce Field", 
                                            vocabulary="buildSFFieldOptionList")
              },
              i18n_domain = "salesforcepfgadapter",
              ),
+        ),
+    DataGridField('presetValueMap',
+        searchable=0,
+        required=0,
+        read_permission=ModifyPortalContent,
+        schemata='field mapping',
+        columns=('value', 'sf_field'),
+        allow_delete = True,
+        allow_insert = True,
+        allow_reorder = False,
+        widget = DataGridWidget(
+            label=_(u'Preset field values'),
+            description=_(u"You may optionally configure additional values that should be mapped to Salesforce fields.  The same value will be passed each time the form is submitted.  For example, this could be used to set the LeadSource for a new Lead to 'web'."),
+            columns={
+                'value': Column('Value'),
+                'sf_field': SelectColumn('Salesforce Field',
+                                         vocabulary='buildSFFieldOptionList')
+                }
+            ),
         ),
     DataGridField('dependencyMap',
          searchable=0,
@@ -230,7 +249,7 @@ class SalesforcePFGAdapter(FormActionAdapter):
                 adapter = getattr(aq_parent(self), adapter_id)
                 if not adapter._isExecutableAdapter():
                     logger.warn("""Adapter %s will not create a Salesforce object \
-                                   either do to its execution condition or it has been \
+                                   either due to its execution condition or it has been \
                                    disabled on the parent form.""" % adapter.getId()) 
                     continue
                     
@@ -239,10 +258,17 @@ class SalesforcePFGAdapter(FormActionAdapter):
                     salesforce = getToolByName(self, 'portal_salesforcebaseconnector')
                     
                     # flesh out sObject with data returned from previous creates
-                    for (id,field) in [(adapter_map['adapter_id'], adapter_map['sf_field']) for adapter_map in adapter.getDependencyMap() \
-                      if adapter_map['sf_field'] and getattr(aq_parent(self), adapter_map['adapter_id'])._isExecutableAdapter()]:
-                        sObject[field] = uids[id]
-                    
+                    for mapping in adapter.getDependencyMap():
+                        if not mapping['sf_field']:
+                            continue
+                        if not getattr(aq_parent(self), mapping['adapter_id'])._isExecutableAdapter():
+                            continue
+                        sObject[mapping['sf_field']] = uids[mapping['adapter_id']]
+
+                    # add in the preset values
+                    for mapping in adapter.getPresetValueMap():
+                        sObject[mapping['sf_field']] = mapping['value']
+
                     result = salesforce.create(sObject)[0]
                     if result['success']:
                         logger.debug("Successfully created new %s %s in Salesforce" % \
